Spring AI: implemented simple log advisor with customized chat options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ logging.level.org.springframework.http.client=DEBUG
 logging.level.org.springframework.web.client.RestClient=DEBUG
 
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.ai.chat.client.advisor= DEBUG
 
 spring.ai.ollama.api-key=a62017d895874394940e6eb3e2eca933.CmIRBKY-pvwzW4nCiTTGGaQZ
 spring.ai.ollama.base-url=http://localhost:11434
