Spring AI: JDBC Chat memory implemeted for storing messages permanently

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,11 @@ spring.ai.ollama.api-key=a62017d895874394940e6eb3e2eca933.CmIRBKY-pvwzW4nCiTTGGa
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.model=gpt-oss:120b-cloud
 
+spring.datasource.url = jdbc:postgresql://localhost:5432/demo
+spring.datasource.username = postgres
+spring.datasource.password = 0000
+
+
+spring.ai.chat.memory.repository.jdbc.initialize-schema= always
+
 
