--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8081
 logging.level.org.springframework.http.client=DEBUG
 logging.level.org.springframework.web.client.RestClient=DEBUG
 
+
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.ai.chat.client.advisor= DEBUG
 
@@ -12,11 +13,14 @@ spring.ai.ollama.api-key=a62017d895874394940e6eb3e2eca933.CmIRBKY-pvwzW4nCiTTGGa
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.model=gpt-oss:120b-cloud
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/demo
+spring.datasource.url = jdbc:postgresql://localhost:5432/test
 spring.datasource.username = postgres
 spring.datasource.password = 0000
+spring.datasource.driver-class-name= org.postgresql.Driver
+spring.jpa.properties.hiberate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+spring.ai.vectorstore.pgvector.initialize-schema= true
 
 
-spring.ai.chat.memory.repository.jdbc.initialize-schema= always
 
 
